custom.css
/* ... */
/* references block */

.cp__right-sidebar .references-blocks .color-level {
  background: var(--ct-sidebar-page-references-background);
}

/* blockquote */

.cp__right-sidebar blockquote {
  background: var(--ct-sidebar-quote-background);
  border-left: var(--ct-sidebar-quote-border-left);
}

/* page embed */

.cp__right-sidebar .embed-page {
  background: var(--ct-sidebar-page-embed-background);
  border-radius: 0.25rem;
}

/* block embed */

.cp__right-sidebar .embed-block {
  background: var(--ct-sidebar-block-embed-background);
  border-radius: 0.25rem;
}

/* Recent pages */

.recent-pages a {
  color: var(--ct-recent-pages-color);
}

/* Help pages */

.cp__sidebar-help-docs a {
  color: var(--ct-help-pages-color);
}

/***************************************************************
**************************** MISC ******************************
***************************************************************/

hr {
  border: 0;
  height: 1px;
  background: #333;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
  margin-left: -1rem;
}

#head .fade-link {
  font-size: 0.875rem;
}

textarea {
  caret-color: var(--ct-caret-color);
}

/* Remove focus ring in ff */
textarea:focus-visible {
  outline: none;
}

div#journals::before {
  content: '📅';
  opacity: 0.8;
  display: block;
  position: sticky;
  float: right;
  top: 2.4em;
  font-size: 1.5em;
  z-index: 10;
  text-shadow: 0 0 1px;
}

::selection {
  background: var(--ct-text-selection-color);
  color: var(--ct-text-selection-font-color, inherit);
}

.ls-block.selected {
  border-bottom-color: var(--ct-block-selected-border-bottom-color);
}
.block-highlight,
.content .selected {
  background: var(--ct-block-selected-background);
}

.time-spent {
  position: relative;
  align-self: center;
}

/* journal border */

#journals .journal-item {
  border-top: var(--ct-journal-border-height) var(--ct-journal-border-style)
    var(--ct-journal-border-color);
}

/* hide bullet for heading */

[style="height: 24px; margin-top: 22px; float: left;"] {
  opacity: 0;
}

[style="height: 24px; margin-top: 22px; float: left;"]:hover {
  opacity: 1;
}

/* tables */

tr {
  border-bottom: none;
}

.table-wrapper {
  max-width: 100%;
  border-radius: 5px;
  margin: 0 0 10px 0;
}

.table-wrapper table {
  margin: 0;
}

.table-wrapper tr,
.cp__sidebar-help-docs table tr {
  border-bottom: none;
}

.table-wrapper thead tr,
.cp__sidebar-help-docs table thead tr,
.flex-1 table thead tr {
  background: var(--ct-table-head-background, none) !important;
}

.table-wrapper thead th,
.cp__sidebar-help-docs table thead th,
.flex-1 table thead th {
  color: var(--ct-table-head-color, #fff);
}

.table-wrapper tbody tr:nth-child(odd),
.cp__sidebar-help-docs table tbody tr:nth-child(odd),
.flex-1 table tbody tr:nth-child(odd) {
  background: var(--ct-table-row-odd-bg, rgb(210 194 173 / 50%));
  color: var(--ct-table-row-odd-color);
}

.table-wrapper tbody tr:nth-child(even),
.cp__sidebar-help-docs table tbody tr:nth-child(even),
.flex-1 table tbody tr:nth-child(even) {
  background: var(--ct-table-row-even-bg, rgb(185 172 157 / 70%));
  color: var(--ct-table-row-even-color);
}

.table-wrapper thead th,
.cp__sidebar-help-docs table thead th,
.flex-1 table thead th {
  border-bottom: var(--ct-table-head-border-bottom, 2px solid #a59585);
}

.table-wrapper tbody td,
.cp__sidebar-help-docs table tbody td,
.flex-1 table tbody td {
  border-bottom: var(--ct-table-row-border-bottom, none);
}

.table-wrapper tr:last-child td,
.cp__sidebar-help-docs table tr:last-child td,
.flex-1 table tr:last-child td {
  border-bottom: none;
}

/* Settings */

.ui__modal-overlay div {
  background: var(--ct-settings-overlay-background);
}

.ui__modal-panel,
.settings-modal {
  background: var(--ct-settings-background);
}

.cp__settings-main > h1.title {
  margin-top: 0;
}

.ui__toggle .wrapper.bg-indigo-600 {
  background: var(--ct-settings-switcher-background);
}

.settings-modal .form-select {
  background: var(--ct-settings-select-background);
  color: var(--ct-settings-select-color);
  border: none;
}

.settings-modal .form-input {
  border: var(--ct-settings-input-border);
  color: var(--ct-settings-input-color);
  background: none;
}

.settings-modal hr {
  border-color: var(--ct-settings-hr-color);
}

/* "Rename" modal */

.ui__modal-overlay div {
  background: var(--ct-rename-overlay-background, #222);
}

.ui__modal-panel {
  background: var(--ct-rename-background, #1e1e1e);
}

#modal-headline {
  color: var(--ct-rename-header-color, #d5d5d5);
}

.ui__modal-panel .form-input {
  background: var(--ct-rename-background);
  color: var(--ct-rename-input-color, #fff) !important;
}

.ui__modal-panel
  button.inline-flex.justify-center.w-full.rounded-md.border.border-gray-300 {
  background: var(--ct-rename-cancel-background, #222);
  color: var(--ct-rename-cancel-color, #d5d5d5);
  border: none;
  box-shadow: none;
}

/* Tooltip */

.Tooltip__label {
  background-color: var(--ct-page-background);
  box-shadow: 0 0 2px var(--ct-journal-border-color);
}

.Tooltip__label::after {
  border-bottom-color: var(--ct-page-background);
}

.ui__button {
  border: var(--ct-sidebar-item-border);
}

/*=============================================================================================================================
==== highlight current path by cannnibalox v0.2 https://discuss.logseq.com/t/css-highlights-current-path-bullets-color/371 ====
=============================================================================================================================*/

.ls-block .bullet {
  background-color: var(--ct-page-reference-color);
  box-shadow: 0 0 0 2px var(--ct-background),
    0 0 0 3px var(--ct-page-reference-color);
}

.ls-block:not(:focus-within) .bullet {
  background-color: var(--ct-bullet-color);
  box-shadow: none;
}
/* ... */

